--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aday45.github.io/plant-app/",
+  "homepage": "https://AdaY45.github.io/plant-app",
   "name": "plant-app",
   "version": "0.1.0",
   "private": true,
